# REF_DESIGN

./: README.md
beaglebone/gpio/: Makefile  gpio.c  gpio.h  repeat.c  send_message.c
gnuradio/demod/: online-demod.grc
gnuradio/gr-cw_binary/: CMakeLists.txt
gnuradio/gr-cw_binary/docs/: README.cw_binary
gnuradio/gr-cw_binary/docs/doxygen/: Doxyfile.in
gnuradio/gr-cw_binary/docs/doxygen/other/: group_defs.dox  main_page.dox
gnuradio/gr-cw_binary/grc/: CMakeLists.txt  cw_binary_change_fb.xml  cw_binary_sample_bit_bb.xml  cw_binary_sample_on_ctrl_ff.xml
gnuradio/gr-cw_binary/include/cw_binary/: CMakeLists.txt  api.h  change_fb.h  sample_bit_bb.h  sample_on_ctrl_ff.h
gnuradio/gr-cw_binary/lib/: CMakeLists.txt  change_fb_impl.cc  change_fb_impl.h  qa_cw_binary.cc  qa_cw_binary.h  sample_bit_bb_impl.cc  sample_bit_bb_impl.h  sample_on_ctrl_ff_impl.cc  sample_on_ctrl_ff_impl.h  test_cw_binary.cc
gnuradio/gr-cw_binary/python/: CMakeLists.txt  __init__.py  qa_change_fb.py  qa_sample_bit_bb.py  qa_sample_on_ctrl_ff.py
gnuradio/gr-cw_binary/swig/: CMakeLists.txt  cw_binary_swig.i
gnuradio/gr-hamming/: CMakeLists.txt
gnuradio/gr-hamming/docs/: README.hamming
gnuradio/gr-hamming/docs/doxygen/: Doxyfile.in
gnuradio/gr-hamming/docs/doxygen/other/: group_defs.dox  main_page.dox
gnuradio/gr-hamming/grc/: CMakeLists.txt  hamming_decode_hamming_bb.xml  hamming_wait_for_prefix_bb.xml
gnuradio/gr-hamming/include/hamming/: CMakeLists.txt  api.h  decode_hamming_bb.h  wait_for_prefix_bb.h
gnuradio/gr-hamming/lib/: CMakeLists.txt  decode_hamming_bb_impl.cc  decode_hamming_bb_impl.h  qa_hamming.cc  qa_hamming.h  test_hamming.cc  wait_for_prefix_bb_impl.cc  wait_for_prefix_bb_impl.h
gnuradio/gr-hamming/python/: CMakeLists.txt  __init__.py  qa_decode_hamming_bb.py  qa_wait_for_prefix_bb.py
gnuradio/gr-hamming/swig/: CMakeLists.txt  hamming_swig.i
